Set version to 3.13.1-SNAPSHOT. Fix mockito errors caused by Java 17.