@@ -27,7 +27,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>cy-rest</artifactId>
 
-	<version>3.13.0-SNAPSHOT</version>
+	<version>3.13.1-SNAPSHOT</version>
 
 	<packaging>bundle</packaging>
 	<name>cyREST</name>
@@ -269,6 +269,12 @@
 							<value>${cytoscape.api.version}</value>
 						</property>
 					</systemProperties>
+					<!-- Below is required for mockito -->
+        			<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.net=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
